# ur-rpc-mastered

./: Makefile  readme.md
files/: ur-rpc-server-config.json  ur-rpc-super
files/default-configs/: broker_super_ssl.json
pkg_src/: CMakeLists.txt  Makefile
pkg_src/certs/: client1.crt  client1.key  client2.crt  client2.key
pkg_src/cmake/: arm-toolchain.cmake
pkg_src/config/: auth.json  broker.json  broker_super_ssl.json  disconnect_actions.json  disconnect_handler.json
pkg_src/src/: auth.c  auth.h  client_config.c  client_config.h  client_manager.c  client_manager.h  config.c  config.h  disconnect_handler.c  disconnect_handler.h  logger.c  logger.h  main.c  message_handler.c  message_handler.h  mqtt_broker.c  mqtt_broker.h  mqtt_broker_disconnect.c  mqtt_client_template.c  mqtt_client_template.h  mqtt_protocol.c  net.c  net.h  persistence.c  persistence.h  serialization.c  serialization.h  session.c  session.h  session_heartbeat.c  ssl_wrapper.c  ssl_wrapper.h  topic_tree.c  topic_tree.h  utils.c  utils.h
ur-logger-api/: CMakeLists.txt
ur-rpc-mastered/files/: ur-rpc-super.init
ur-rpc-mastered/files/certs/: ca.crt  ca.key  ca.srl  server.crt  server.key
ur-rpc-mastered/files/default-configs/: broker_super_normal.json
ur-rpc-mastered/pkg_src/: CMakeLists.txt
ur-rpc-mastered/pkg_src/certs/: client_auth_cert.conf
ur-rpc-mastered/pkg_src/certs/broker/: ca.key  ca.srl  server.crt  server.csr  server.key
ur-rpc-mastered/pkg_src/certs/generator-client/: client.crt  client.csr  client.key
ur-rpc-mastered/pkg_src/cmake/: cjson.cmake  mbed-tls.cmake  x86-toolchain.cmake
ur-rpc-mastered/pkg_src/config/: broker_super_normal.json  broker_super_ssl.json  maximum_tls_support.json  notification_config.json  simple_notification_config.json  ssl_tls_support.json
ur-rpc-mastered/pkg_src/src/: cert_manager.c  cert_manager.h  client_manager.c  client_manager.h  config.c  config.h  main.c  message_handler.c  message_handler.h  mqtt_broker.c  mqtt_broker.h  mqtt_protocol.c  mqtt_protocol.h  network.c  network.h  notification_manager.c  notification_manager.h  ssl_wrapper.c  ssl_wrapper.h  utils.c  utils.h
ur-rpc-mastered/pkg_src/tesing-clients/certif-generation/: API_REFERENCE.md  CERTIFICATE_MANAGER_COMPLETION_REPORT.md  GETTING_STARTED.md  Makefile  README.md  USAGE_EXAMPLES.md  ca.crt  cert_manager.c  cert_manager.h  mosquitto_cert_client  mosquitto_cert_client.c  ssl_tls_main  ssl_tls_main.c  test_ssl_connection  test_ssl_connection.c
ur-rpc-mastered/pkg_src/tesing-clients/certif-generation/generated_certs/: client_specific_runner_9383_1753641834_1753641834.crt  client_specific_runner_9383_1753642425_1753642426.key  client_specific_runner_9383_1753650222_1753650222.key  client_specific_runner_9383_1753650573_1753650573.crt  client_specific_ssl_tls_cert_client_9383_1753639136_1753639136.crt  client_specific_ssl_tls_cert_client_9383_1753639136_1753639136.key  client_specific_ssl_tls_cert_client_9383_1753639695_1753639696.key  client_specific_ssl_tls_cert_client_9383_1753639984_1753639985.crt  client_specific_ssl_tls_cert_client_9383_1753640214_1753640215.key  generic_runner_9383_1753650222_1753650222.crt  generic_runner_9383_1753650222_1753650222.key  generic_runner_9383_1753696077_1753696077.crt  generic_ssl_tls_cert_client_9383_1753639136_1753639136.crt  generic_ssl_tls_cert_client_9383_1753639136_1753639136.key  generic_ssl_tls_cert_client_9383_1753639695_1753639695.key  generic_ssl_tls_cert_client_9383_1753639874_1753639874.crt  generic_ssl_tls_cert_client_9383_1753640214_1753640214.key
ur-rpc-mastered/pkg_src/tesing-clients/certif-generation/ported/: cert_manager.c  cert_manager.h
ur-rpc-mastered/pkg_src/tesing-clients/cpp-certif-gen/: CMakeLists.txt  CertificateClient.cpp  CertificateClient.hpp  CertificateManager.cpp  CertificateManager.hpp  Makefile  cert_config.json  cert_manager.c  cert_manager.h  certificate_cli_cpp.cpp
ur-rpc-mastered/pkg_src/tesing-clients/notifications-test/: Makefile  main  main.c  notification_client.c  notification_client.h
ur-rpc-mastered/pkg_src/tesing-clients/notifications-test-ssl/: CMakeLists.txt  main.c  notification_client.c  notification_client.h  run.sh
ur-rpc-mastered/pkg_src/tesing-clients/ssl_certif/: Makefile  main  main.c  runner_client.crt  runner_client.key
